<resources>
	<string name="app_name">Napoli Restaurant</string>
	<string name="intro">Italian Food</string>
	<string name="textTag">The Best Italian Flavor!</string>
	<string name="robotPic">robotPic</string>
	<string name="robotType">Endoskeletons – T-700</string>
	<string name="season">Summer</string>
	<string name="robotDescription">The icon of the franchise, besides Arnold Schwarzenegger in sunglasses.
		Endoskeletons were an instant creepy classic since their introduction. With a look that’s both a throwback to
		walking-skeleton ghost stories and an echo of future mechanization fears, they strike a primal nerve. However,
		in the future war, they’re basically cannon fodder.
	</string>
	<string name="logoRobot">TODO</string>
	<string name="changeRobot">Select</string>
	<string name="select_your_robot">Select Your Robot</string>
	<string name="title">Title</string>
	<string name="total_0">Total: 0</string>
	<string name="add_this_item">Add This Item</string>
	<string name="quantity">Quantity</string>
	<string name="description">Description</string>
	<string name="zero">0</string>
	<string name="enter_quantity">Enter Quantity</string>
	<string name="item">Item</string>
	<string name="qty">Qty</string>
	<string name="usd">USD</string>
	<string name="total">Total</string>
	<string name="todo">TODO</string>
	<string name="clear">Clear</string>
	<string name="see_cart">See Cart</string>
</resources>
