<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.lucas.restaurante.ui.Purchase" android:orientation="vertical">
	
	
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="54dp">
			<TextView
					android:text="@string/item"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/Item" android:layout_weight="1"/>
			<TextView
					android:text="@string/qty"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/Qty" android:layout_weight="1"/>
			<TextView
					android:text="@string/usd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/USD" android:layout_weight="1"/>
			<TextView
					android:text="@string/total"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:id="@+id/Total" android:layout_weight="1"/>
		</LinearLayout>
		<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="397dp">
			<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:id="@+id/purchaseRecycler"
					android:layout_height="322dp"/>
		</LinearLayout>
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="94dp">
			<Button
					android:text="@string/clear"
					android:onClick="onClickClear"
					android:layout_width="50dp"
					android:layout_height="match_parent"
					android:id="@+id/clear"
					android:layout_weight="1"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
