<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  xmlns:app="http://schemas.android.com/apk/res-auto"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context="com.lucas.restaurante.ui.Detail">
	<ImageView
			android:cropToPadding="true"
			android:id="@+id/thumbnail"
			android:layout_width="match_parent"
			android:layout_height="277dp"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:scaleType="centerCrop"/>
	<TextView
			android:text="@string/title"
			android:layout_width="match_parent"
			android:layout_height="64dp" android:id="@+id/title"/>
	<TextView
			android:text="@string/description"
			android:layout_width="match_parent"
			android:layout_height="61dp" android:id="@+id/textView2"/>
	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="79dp">
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/descDetail" android:layout_weight="1"/>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/price"
				android:inputType="numberDecimal"
				android:layout_weight="1" tools:ignore="TextViewEdits"/>
	</LinearLayout>
	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="68dp">
		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			<TextView
					android:text="@string/quantity"
					android:layout_width="0dp"
					android:layout_height="wrap_content" android:id="@+id/quantity" android:layout_weight="1"/>
			<EditText
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:text="0"
					android:ems="10"
					android:id="@+id/zero" android:layout_weight="1"/>
		</LinearLayout>
	</LinearLayout>
	<Button
			android:text="@string/add_this_item"
			android:textSize="30sp"
			android:onClick="onClickAdd"
			android:layout_width="match_parent"
			android:layout_height="20dp" android:id="@+id/button" android:layout_weight="1"/>

</LinearLayout>
