<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:screenOrientation="portrait"
        tools:context=".MainActivity"
        android:background="#FDFDFD">

    <ImageView android:layout_width="210dp"
               android:layout_height="371dp"
               android:src="@drawable/napoli"
               app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
               android:layout_marginEnd="10dp" app:layout_constraintBottom_toBottomOf="parent"
               android:layout_marginTop="100dp" android:id="@+id/logo" android:contentDescription="@string/robotPic"
               app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.0"
               android:scaleType="fitEnd"/>
    <TextView
            android:text="@string/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/slogan"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="36sp"
            android:fontFamily="@font/montserrat_bold" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/tag"/>
    <TextView
            android:text="@string/textTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="147dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="148dp"
            android:layout_marginBottom="148dp"
            android:fontFamily="@font/montserrat"/>


</androidx.constraintlayout.widget.ConstraintLayout>